--- a/src/main.sass
+++ b/src/main.sass
@@ -1,5 +1,4 @@
-@import "src/libs"
-@import "src/vars"
+@import "vars"
 
 *::-webkit-input-placeholder
 	color: #666
@@ -317,5 +316,6 @@ main
 		height: 600px
 .hidden-y
 	overflow-y: hidden
+
 @import "src/media"
 // Всегда в конце
