--- a/src/main.sass
+++ b/src/main.sass
@@ -1,12 +1,16 @@
 @import "vars"
 
+body
+	margin: 0
+	padding: 0
+
+*, *::before, *::after
+	box-sizing: border-box
 *, a
 	&:focus
 		outline: 2px solid orange
-
 img
 	max-width: 100%
-
 
 body
 	font-size: 16px
@@ -17,39 +21,38 @@ body
 	font-family: $default-font
 	background-color: #34495e
 	color: $main-color
-	opacity: 1
-	padding-top: 10px
 
 h1
 	margin: 0
 
 .container
 	max-width: 1170px
-
+	margin: 0 auto
+	padding: 0 15px
 // header
 .header
+	margin-top: 10px
+	padding-top: 20px
 	padding-bottom: 40px
 	background-color: rgba(26, 188, 156, 0.6)
 	box-shadow: 1px 1px 5px 0px black
-	&__logo
-		margin-top: 20px
+
 // logo
 .logo
 	display: flex
 	max-width: 130px
-	&:hover, &:focus
-		text-decoration: none
+	text-decoration: none
 	&:focus
-		outline: none
-	p
+		text-decoration: none
+	&__text
 		margin: 0
 		font-size: 33px
 		font-weight: 700
 		color: #34495e
 		font-style: italic
-		span
+		&_filled
 			color: $color-h
-	> span
+	&__text-small
 		font-size: 12px
 		font-weight: 400
 		align-self: flex-start
@@ -57,11 +60,6 @@ h1
 		box-shadow: -1px 0px 3px 0px #00000063
 		border-radius: 4px
 		border-bottom-left-radius: 0px
-	&:focus
-		> span
-			color: orange
-
-
 
 
 .header-content
@@ -83,6 +81,7 @@ h1
 	@media screen and (max-width: 375px)
 		font-size: 12px
 		margin-left: 10px
+
 // animation jumping
 @keyframes jumping
 	0%
@@ -119,7 +118,7 @@ h1
 			animation-name: jumping
 			animation-duration: 1s
 
-.header-image
+.photo-frame
 	width: 150px
 	height: 150px
 	display: flex
@@ -128,31 +127,13 @@ h1
 	border-radius: 50%
 	overflow: hidden
 	margin-top: 50px
-	img
+	&__image
 		margin: auto
 		width: 100%
 		height: 100%
 		object-fit: cover
 
-// section-title
-.section-title
-	font-size: 18px
-	font-weight: 300
-	font-style: italic
-	margin: 0
-	position: relative
-	display: inline-block
-	padding-bottom: 5px
-	&::after
-		content: ''
-		position: absolute
-		bottom: 0
-		left: -10%
-		width: 100%
-		height: 1px
-		background-color: $main-color
 
-// main
 .main
 	padding-top: 50px
 	text-align: center
@@ -202,9 +183,6 @@ h1
 					left: 0
 
 
-//
-
-// footer
 .footer
 	padding-top: 40px
 	padding-bottom: 40px
@@ -218,14 +196,15 @@ h1
 	&__title
 		font-size: 16px
 
-	&__info
-		p
-			font-size: 13px
-			font-weight: 400
-			a
-				margin-left: 5px
-				color: $main-color
-				transition: all 300ms
-				&:hover
-					color: $color-h
-					text-decoration: none
+.contact-info
+	&__string
+		font-size: 13px
+		font-weight: 400
+		margin: 10px 0
+	&__link
+		margin-left: 5px
+		color: $main-color
+		transition: all 300ms
+		&:hover
+			color: $color-h
+			text-decoration: none
