--- a/src/main.sass
+++ b/src/main.sass
@@ -73,13 +73,27 @@ h1
 	&:focus
 		text-decoration: none
 	&__text
+		position: relative
 		margin: 0
 		font-size: 33px
 		font-weight: 700
 		color: $dark-blue-gray
 		font-style: italic
+		&::before
+			content: ""
+			position: absolute
+			top: 0
+			left: 0
+			display: block
+			width: 100px
+			height: 100px
+			background-image: radial-gradient(rgba(255,255,255,1), rgba(255,255,255,0) 30%), linear-gradient(45deg, rgba(0,0,0,0) 49%, rgba(255,255,255,.4) 50%, rgba(0,0,0,0) 51%), linear-gradient(135deg, rgba(0,0,0,0) 49%, rgba(255,255,255,.4) 50%, rgba(0,0,0,0) 51%)
+			animation: blinkStar 10s linear infinite
+			transform: scale(0, 0) rotate(0deg)
 		&_filled
 			color: $color-green
+		// &_dark
+
 	&__text-small
 		font-size: 12px
 		font-weight: 400
@@ -89,6 +103,22 @@ h1
 		border-radius: 4px
 		border-bottom-left-radius: 0px
 
+@keyframes blinkStar
+	10% 
+		transform: scale(1, 1) rotate(80deg)
+	20% 
+		transform: scale(0, 0) rotate(160deg)
+	100% 
+		transform: scale(0, 0) rotate(0deg)
+
+@keyframes blinkWord
+	0%
+		opacity: 0.4
+	55%
+		opacity: 0.7
+	100%
+		opacity: 1
+		color: $color-green
 
 .header-content
 	display: flex
@@ -207,6 +237,24 @@ h1
 .main
 	padding-top: 10px
 	text-align: center
+
+.framework-list 
+	display: flex
+	list-style: none
+	padding: 0
+	&__item
+		max-width: 300px
+		text-align: left
+		background-color: #0000002b
+		padding: 5px 9px
+		p
+			font-size: 15px
+	&__link 
+		display: flex
+		color: #fff
+		font-size: 14px
+		&:hover
+			color: #45c5b6
 
 .section-work
 	&__list
