--- a/src/main.sass
+++ b/src/main.sass
@@ -82,11 +82,11 @@ h1
 		&::before
 			content: ""
 			position: absolute
-			top: 0
-			left: 0
+			top: 17px
+			left: 5px
 			display: block
-			width: 100px
-			height: 100px
+			width: 20px
+			height: 20px
 			background-image: radial-gradient(rgba(255,255,255,1), rgba(255,255,255,0) 30%), linear-gradient(45deg, rgba(0,0,0,0) 49%, rgba(255,255,255,.4) 50%, rgba(0,0,0,0) 51%), linear-gradient(135deg, rgba(0,0,0,0) 49%, rgba(255,255,255,.4) 50%, rgba(0,0,0,0) 51%)
 			animation: blinkStar 10s linear infinite
 			transform: scale(0, 0) rotate(0deg)
